--- a/config/reskillable.cfg
+++ b/config/reskillable.cfg
@@ -17,7 +17,7 @@ general {
     B:"Enforce requirements on Fake Players"=true
 
     # Set this to false to not require holding down the shift key to view requirements!
-    B:"Hide Requirements"=true
+    B:"Hide Requirements"=false
 
     # Set requirements for items in this list. Each entry is composed of the item key and the requirements
     # The item key is in the simple mod:item_id format. Optionally, it can be in mod:item_id:metadata, if you want to match metadata.
@@ -110,8 +110,6 @@ general {
         notreepunching:mattock/iron:*=reskillable:gathering|6,reskillable:farming|6
         notreepunching:mattock/steel:*=reskillable:gathering|8,reskillable:farming|8
         notreepunching:mattock/diamond:*=reskillable:gathering|12,reskillable:farming|12
-        switchbow:switchbow:*=reskillable:attack|4,reskillable:agility|6,reskillable:magic|3
-        switchbow:switchcrossbow:*=reskillable:attack|6,reskillable:agility|4,reskillable:magic|3
         toolbelt:belt:*=reskillable:agility|4
         adhooks:pudge_launcher:*=reskillable:agility|4
         adhooks:web_launcher:*=reskillable:agility|8
@@ -536,8 +534,8 @@ general {
         spartanweaponry:halberd_bronze:*=reskillable:agility|6
         spartanweaponry:pike_bronze:*=reskillable:attack|6
         spartanweaponry:lance_bronze:*=reskillable:attack|6
-        spartanweaponry:longbow_bronze:*=reskillable:attack|2,reskillable:agility|6
-        spartanweaponry:crossbow_bronze:*=reskillable:attack|6,reskillable:agility|2
+        spartanweaponry:longbow_bronze:*=reskillable:attack|3,reskillable:agility|6
+        spartanweaponry:crossbow_bronze:*=reskillable:attack|6,reskillable:agility|3
         spartanweaponry:throwing_knife_bronze:*=reskillable:agility|6
         spartanweaponry:throwing_axe_bronze:*=reskillable:agility|6
         spartanweaponry:javelin_bronze:*=reskillable:agility|6
@@ -586,36 +584,38 @@ general {
         spartanweaponry:mace_copper:*=reskillable:attack|2
         spartanweaponry:glaive_copper:*=reskillable:attack|2
         spartanweaponry:staff_copper:*=reskillable:agility|2
-        spartanweaponry:dagger_electrum:*=reskillable:agility|2
-        spartanweaponry:longsword_electrum:*=reskillable:attack|2
-        spartanweaponry:katana_electrum:*=reskillable:agility|2
-        spartanweaponry:saber_electrum:*=reskillable:attack|2
-        spartanweaponry:rapier_electrum:*=reskillable:agility|2
-        spartanweaponry:greatsword_electrum:*=reskillable:attack|2
-        spartanweaponry:hammer_electrum:*=reskillable:attack|2
-        spartanweaponry:warhammer_electrum:*=reskillable:attack|2
-        spartanweaponry:spear_electrum:*=reskillable:agility|2
-        spartanweaponry:halberd_electrum:*=reskillable:agility|2
-        spartanweaponry:pike_electrum:*=reskillable:attack|2
-        spartanweaponry:lance_electrum:*=reskillable:attack|2
-        spartanweaponry:throwing_knife_electrum:*=reskillable:agility|2
-        spartanweaponry:throwing_axe_electrum:*=reskillable:agility|2
-        spartanweaponry:javelin_electrum:*=reskillable:agility|2
-        spartanweaponry:boomerang_electrum:*=reskillable:agility|2
-        spartanweaponry:battleaxe_electrum:*=reskillable:attack|2
-        spartanweaponry:mace_electrum:*=reskillable:attack|2
-        spartanweaponry:glaive_electrum:*=reskillable:attack|2
-        spartanweaponry:staff_electrum:*=reskillable:agility|2
+        spartanweaponry:longbow_electrum:*=reskillable:attack|5,reskillable:agility|10,reskillable:magic|5
+        spartanweaponry:crossbow_electrum:*=reskillable:attack|10,reskillable:agility|5,reskillable:magic|5
+        spartanweaponry:dagger_electrum:*=reskillable:agility|10,reskillable:magic|6
+        spartanweaponry:longsword_electrum:*=reskillable:attack|10,reskillable:magic|6
+        spartanweaponry:katana_electrum:*=reskillable:agility|10,reskillable:magic|6
+        spartanweaponry:saber_electrum:*=reskillable:attack|10,reskillable:magic|6
+        spartanweaponry:rapier_electrum:*=reskillable:agility|10,reskillable:magic|6
+        spartanweaponry:greatsword_electrum:*=reskillable:attack|10,reskillable:magic|6
+        spartanweaponry:hammer_electrum:*=reskillable:attack|10,reskillable:magic|6
+        spartanweaponry:warhammer_electrum:*=reskillable:attack|10,reskillable:magic|6
+        spartanweaponry:spear_electrum:*=reskillable:agility|10,reskillable:magic|6
+        spartanweaponry:halberd_electrum:*=reskillable:agility|10,reskillable:magic|6
+        spartanweaponry:pike_electrum:*=reskillable:attack|10,reskillable:magic|6
+        spartanweaponry:lance_electrum:*=reskillable:attack|10,reskillable:magic|6
+        spartanweaponry:throwing_knife_electrum:*=reskillable:agility|10,reskillable:magic|6
+        spartanweaponry:throwing_axe_electrum:*=reskillable:agility|10,reskillable:magic|6
+        spartanweaponry:javelin_electrum:*=reskillable:agility|10,reskillable:magic|6
+        spartanweaponry:boomerang_electrum:*=reskillable:agility|10,reskillable:magic|6
+        spartanweaponry:battleaxe_electrum:*=reskillable:attack|10,reskillable:magic|6
+        spartanweaponry:mace_electrum:*=reskillable:attack|10,reskillable:magic|6
+        spartanweaponry:glaive_electrum:*=reskillable:attack|10,reskillable:magic|6
+        spartanweaponry:staff_electrum:*=reskillable:agility|10,reskillable:magic|6
         spartanshields:shield_basic_stone:*=reskillable:defense|2
         spartanshields:shield_tower_stone:*=reskillable:defense|2
-        spartanshields:shield_basic_electrum:*=reskillable:defense|2
-        spartanshields:shield_tower_electrum:*=reskillable:defense|2
+        spartanshields:shield_basic_electrum:*=reskillable:defense|10,reskillable:magic|6
+        spartanshields:shield_tower_electrum:*=reskillable:defense|10,reskillable:magic|6
         spartanshields:shield_basic_bronze:*=reskillable:defense|6
         spartanshields:shield_tower_bronze:*=reskillable:defense|6
         spartanshields:shield_basic_copper:*=reskillable:defense|2
         spartanshields:shield_tower_copper:*=reskillable:defense|2
-        spartanshields:shield_basic_lead:*=reskillable:defense|3
-        spartanshields:shield_tower_lead:*=reskillable:defense|3
+        spartanshields:shield_basic_lead:*=reskillable:defense|6
+        spartanshields:shield_tower_lead:*=reskillable:defense|6
         spartanshields:shield_basic_electrum:*=reskillable:defense|2
         spartanshields:shield_tower_electrum:*=reskillable:defense|2
         spartanshields:shield_basic_constantan:*=reskillable:defense|4
@@ -645,6 +645,28 @@ general {
         spartanweaponry:staff_silver:*=reskillable:agility|4,reskillable:magic|2
         spartanweaponry:longbow_silver:*=reskillable:attack|2,reskillable:magic|2,reskillable:agility|4
         spartanweaponry:crossbow_silver:*=reskillable:attack|4,reskillable:magic|2,reskillable:agility|2
+        spartanweaponry:dagger_lead:*=reskillable:agility|6
+        spartanweaponry:longsword_lead:*=reskillable:attack|6
+        spartanweaponry:katana_lead:*=reskillable:agility|6
+        spartanweaponry:saber_lead:*=reskillable:attack|6
+        spartanweaponry:rapier_lead:*=reskillable:agility|6
+        spartanweaponry:greatsword_lead:*=reskillable:attack|6
+        spartanweaponry:hammer_lead:*=reskillable:attack|6
+        spartanweaponry:warhammer_lead:*=reskillable:attack|6
+        spartanweaponry:spear_lead:*=reskillable:agility|6
+        spartanweaponry:halberd_lead:*=reskillable:agility|6
+        spartanweaponry:pike_lead:*=reskillable:attack|6
+        spartanweaponry:lance_lead:*=reskillable:attack|6
+        spartanweaponry:throwing_knife_lead:*=reskillable:agility|6
+        spartanweaponry:throwing_axe_lead:*=reskillable:agility|6
+        spartanweaponry:javelin_lead:*=reskillable:agility|6
+        spartanweaponry:boomerang_lead:*=reskillable:agility|6
+        spartanweaponry:battleaxe_lead:*=reskillable:attack|6
+        spartanweaponry:longbow_lead:*=reskillable:attack|3,reskillable:agility|6
+        spartanweaponry:crossbow_lead:*=reskillable:attack|6,reskillable:agility|3
+        spartanweaponry:mace_lead:*=reskillable:attack|6
+        spartanweaponry:glaive_lead:*=reskillable:attack|6
+        spartanweaponry:staff_lead:*=reskillable:agility|6
         spartanweaponry:dagger_gold:*=reskillable:agility|2,reskillable:magic|4
         spartanweaponry:longsword_gold:*=reskillable:attack|2,reskillable:magic|4
         spartanweaponry:katana_gold:*=reskillable:agility|2,reskillable:magic|4
@@ -665,6 +687,7 @@ general {
         spartanweaponry:mace_gold:*=reskillable:attack|2,reskillable:magic|4
         spartanweaponry:glaive_gold:*=reskillable:attack|2,reskillable:magic|4
         spartanweaponry:staff_gold:*=reskillable:agility|2,reskillable:magic|4
+        spartanweaponry:crossbow_gold:*=reskillable:attack|2,reskillable:magic|2
         spartanweaponry:dagger_diamond:*=reskillable:agility|16
         spartanweaponry:longsword_diamond:*=reskillable:attack|16
         spartanweaponry:katana_diamond:*=reskillable:agility|16
@@ -1150,7 +1173,7 @@ general {
         mysticalworld:amethyst_knife:*=reskillable:attack|6,reskillable:gathering|6
         mysticalworld:aubergine_seed:*=reskillable:farming|2
         roots:wildroot:*=reskillable:farming|2
-        mysticalworld:silkworm_egg:*=reskillable:farming|4
+        mysticalworld:silkworm_egg:*=reskillable:farming|6
         mysticalworld:copper_axe:*=reskillable:gathering|2
         mysticalworld:copper_hoe:*=reskillable:farming|2
         mysticalworld:copper_pickaxe:*=reskillable:mining|2
