--- a/config/playerrevive.cfg
+++ b/config/playerrevive.cfg
@@ -13,7 +13,7 @@ general {
     S:exhaustion=0.5
 
     # Will spawn particles above the player hinted at his location. [default: false]
-    B:particleBeacon=false
+    B:particleBeacon=true
 
     # How much food a player will have after being revived. [range: 1 ~ 20, default: 6]
     I:playerFoodAfter=6
@@ -31,10 +31,10 @@ general {
 
 sound {
     # Disable revive and dead sound [default: false]
-    B:disableSounds=true
+    B:disableSounds=false
 
     # Volume of the music played while bleeding [range: 0.0 ~ 2.0, default: 1.0]
-    S:volume=0.0
+    S:volume=0.5
 }
 
 
