--- a/config/xpfromharvest.cfg
+++ b/config/xpfromharvest.cfg
@@ -7,7 +7,7 @@ general {
     I:Chance=100
 
     # Enable simple harvesting and replanting with right click
-    B:"Simple Harvest"=true
+    B:"Simple Harvest"=false
 
     # Amount of XP given
     # Min: 1
