--- a/mods/desktop.ini
+++ b/mods/desktop.ini
@@ -1,3 +1,5 @@
 [LocalizedFileNames]
+Treasure2-mc1.12.2-f14.23.5.2854-v1.16.1.jar=@Treasure2-mc1.12.2-f14.23.5.2854-v1.16.1.jar,0
+Treasure2WizardryLP-mc1.12.2-f14.23.5.2854-v1.0.0.jar=@Treasure2WizardryLP-mc1.12.2-f14.23.5.2854-v1.0.0.jar,0
 jei_1.12.2-4.16.1.302.jar=@jei_1.12.2-4.16.1.302.jar,0
 jeiintegration_1.12.2-1.5.1.36.jar=@jeiintegration_1.12.2-1.5.1.36.jar,0
