new ores + recipes

--- a/config/apotheosis/enchantability.cfg
+++ b/config/apotheosis/enchantability.cfg
@@ -1,6 +1,10 @@
 # Configuration file
 
 "enchantability - armor" {
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
+    I:APIARIST_ARMOR=15
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 8]
     I:ARCTIC=8
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
@@ -8,8 +12,6 @@
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
     I:BATTLEMAGE=15
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 20]
     I:BRONZE=20
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 10]
@@ -17,14 +19,8 @@
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 12]
     I:CHAIN=12
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 20]
     I:CULTIST_LEADER=20
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 13]
     I:CULTIST_PLATE=13
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 13]
     I:CULTIST_ROBE=13
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 5]
@@ -62,15 +58,13 @@
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 30]
     I:"Dragonsteel Ice"=20
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 5]
     I:EMERALD=5
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 10]
     I:Earplugs=10
-    I:FIERY=10
 
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 25]
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 10]
+    I:FIERY=10
     I:FORTRESS=20
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 10]
@@ -93,11 +87,17 @@
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 9]
     I:IRON=9
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
     I:IRONWOOD=15
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 11]
     I:JELLED_SLIME=11
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 8]
     I:KNIGHTMETAL=8
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 8]
     I:KNIGHTPHANTOM=8
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
@@ -105,8 +105,6 @@
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 0]
     I:Lifebelt=0
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 20]
     I:MITHRIL=20
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 10]
@@ -117,6 +115,8 @@
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
     I:MyrmexJungle=15
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
     I:NAGA_SCALE=15
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 16]
@@ -139,9 +139,9 @@
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 25]
     I:SOL_VISAGE=25
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 25]
     I:SPECIAL=20
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 9]
     I:STEELEAF=9
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 20]
@@ -173,14 +173,8 @@
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 20]
     I:Silver=20
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 25]
     I:THAUMIUM=25
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 10]
     I:VOID=10
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 10]
     I:VOIDROBE=10
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
@@ -197,6 +191,8 @@
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 5]
     I:"White Deathworm"=5
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
     I:YETI=15
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 5]
@@ -220,8 +216,6 @@
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 12]
     I:hideARMOR=12
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 10]
     I:material_archer=10
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 9]
@@ -259,17 +253,12 @@
 
 
 "enchantability - tools" {
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 17]
     I:AMBER=17
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 16]
     I:AMETHYST=16
     I:Aluminium=14
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 10]
     I:AmphithereSword=10
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 15]
     I:BRONZE=15
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 10]
@@ -278,12 +267,8 @@
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 9]
     I:"Bound Tools"=9
     I:Bronze=14
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 20]
     I:CVOID=20
     I:Copper=5
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 22]
     I:DEMONIC=22
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 10]
@@ -312,13 +297,15 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 6]
     I:"Explosion Pickaxe"=6
-    I:FIERY=10
 
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 10]
+    I:FIERY=10
     I:FROST=5
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 22]
     I:FireDragonbone=22
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
     I:GIANTSTONE=5
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 40]
@@ -341,22 +328,22 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 14]
     I:IRON=14
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 25]
     I:IRONWOOD=25
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 22]
     I:IceDragonbone=22
     I:Invar=10
     I:JungleChitin=8
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 8]
     I:KNIGHTMETAL=8
     I:Lumium=14
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 0]
     I:MAGICAL=0
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 17]
     I:MALACHITE=17
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 10]
     I:MITHRIL=10
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 8]
@@ -370,17 +357,9 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 7]
     I:"Obsidian Harvester"=7
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 20]
     I:PRIMALVOID=20
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 10]
     I:REALEMERALD=10
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 20]
     I:RUBY=20
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 18]
     I:SAPPHIRE=18
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 15]
@@ -388,9 +367,9 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 25]
     I:SKULL=25
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 15]
     I:STEEL=15
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 9]
     I:STEELEAF=9
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
@@ -403,16 +382,14 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 10]
     I:StymphalianSword=10
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 30]
     I:TFGLASS=30
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
     I:TFICE=5
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 22]
     I:THAUMIUM=22
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 18]
     I:THAUMIUM_ELEMENTAL=18
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 10]
     I:VOID=10
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
