--- a/config/apotheosis/names.cfg
+++ b/config/apotheosis/names.cfg
@@ -2,6 +2,10 @@
 
 armors {
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:APIARIST_ARMOR <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:ARCTIC <
      >
 
@@ -12,8 +16,6 @@ armors {
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:BATTLEMAGE <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:BRONZE <
      >
 
@@ -28,16 +30,10 @@ armors {
         Chain Link
         Scale
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:CULTIST_LEADER <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:CULTIST_PLATE <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:CULTIST_ROBE <
      >
 
@@ -93,8 +89,6 @@ armors {
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:"Dragonsteel Ice" <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:EMERALD <
      >
 
@@ -105,8 +99,6 @@ armors {
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:FIERY <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:FORTRESS <
      >
 
@@ -175,8 +167,6 @@ armors {
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:Lifebelt <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:MITHRIL <
      >
 
@@ -223,8 +213,6 @@ armors {
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:SOL_VISAGE <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:SPECIAL <
      >
 
@@ -271,16 +259,10 @@ armors {
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:Silver <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:THAUMIUM <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:VOID <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:VOIDROBE <
      >
 
@@ -335,8 +317,6 @@ armors {
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:hideARMOR <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:material_archer <
      >
 
@@ -988,8 +968,6 @@ tools {
     # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:AmphithereSword <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:BRONZE <
      >
 
@@ -1000,12 +978,8 @@ tools {
     # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"Bound Tools" <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:CVOID <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:DEMONIC <
      >
 
@@ -1049,8 +1023,6 @@ tools {
     # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:FIERY <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:FROST <
      >
 
@@ -1115,8 +1087,6 @@ tools {
     # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:MAGICAL <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:MITHRIL <
      >
 
@@ -1135,12 +1105,8 @@ tools {
     # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"Obsidian Harvester" <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:PRIMALVOID <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:REALEMERALD <
      >
 
@@ -1179,16 +1145,10 @@ tools {
     # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:TFICE <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:THAUMIUM <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:THAUMIUM_ELEMENTAL <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:VOID <
      >
 
