--- a/config/reskillable.cfg
+++ b/config/reskillable.cfg
@@ -93,19 +93,25 @@ general {
         rustic:tomato_seeds:*=reskillable:farming|4
         rustic:grape_stem:*=reskillable:farming|4
         notreepunching:knife/copper:*=reskillable:gathering|2
+        notreepunching:knife/tin:*=reskillable:gathering|2
         notreepunching:knife/bronze:*=reskillable:gathering|6
         notreepunching:knife/gold:*=reskillable:gathering|4,reskillable:magic|2
         notreepunching:knife/iron:*=reskillable:gathering|8
+        notreepunching:knife/lead:*=reskillable:gathering|3
         notreepunching:knife/steel:*=reskillable:gathering|12
         notreepunching:knife/diamond:*=reskillable:gathering|16
         notreepunching:saw/gold:*=reskillable:gathering|4,reskillable:magic|2
         notreepunching:saw/copper:*=reskillable:gathering|2
+        notreepunching:saw/tin:*=reskillable:gathering|2
+        notreepunching:saw/lead:*=reskillable:gathering|4
         notreepunching:saw/bronze:*=reskillable:gathering|6
         notreepunching:saw/iron:*=reskillable:gathering|8
         notreepunching:saw/steel:*=reskillable:gathering|12
         notreepunching:saw/diamond:*=reskillable:gathering|16
         notreepunching:mattock/copper:*=reskillable:gathering|2,reskillable:farming|2
+        notreepunching:mattock/tin:*=reskillable:gathering|2,reskillable:farming|2
         notreepunching:mattock/bronze:*=reskillable:gathering|4,reskillable:farming|4
+        notreepunching:mattock/lead:*=reskillable:gathering|3,reskillable:farming|3
         notreepunching:mattock/gold:*=reskillable:gathering|2,reskillable:farming|2,reskillable:magic|2
         notreepunching:mattock/iron:*=reskillable:gathering|6,reskillable:farming|6
         notreepunching:mattock/steel:*=reskillable:gathering|8,reskillable:farming|8
@@ -478,6 +484,8 @@ general {
         spartanweaponry:crossbow_leather:*=reskillable:attack|2,reskillable:agility|2
         spartanweaponry:longbow_copper:*=reskillable:attack|2,reskillable:agility|3
         spartanweaponry:crossbow_copper:*=reskillable:attack|3,reskillable:agility|2
+        spartanweaponry:longbow_tin:*=reskillable:attack|2,reskillable:agility|3
+        spartanweaponry:crossbow_tin:*=reskillable:attack|3,reskillable:agility|2
         spartanweaponry:dagger_iron:*=reskillable:agility|8
         spartanweaponry:longsword_iron:*=reskillable:attack|8
         spartanweaponry:katana_iron:*=reskillable:agility|8
@@ -584,6 +592,26 @@ general {
         spartanweaponry:mace_copper:*=reskillable:attack|2
         spartanweaponry:glaive_copper:*=reskillable:attack|2
         spartanweaponry:staff_copper:*=reskillable:agility|2
+        spartanweaponry:dagger_tin:*=reskillable:agility|2
+        spartanweaponry:longsword_tin:*=reskillable:attack|2
+        spartanweaponry:katana_tin:*=reskillable:agility|2
+        spartanweaponry:saber_tin:*=reskillable:attack|2
+        spartanweaponry:rapier_tin:*=reskillable:agility|2
+        spartanweaponry:greatsword_tin:*=reskillable:attack|2
+        spartanweaponry:hammer_tin:*=reskillable:attack|2
+        spartanweaponry:warhammer_tin:*=reskillable:attack|2
+        spartanweaponry:spear_tin:*=reskillable:agility|2
+        spartanweaponry:halberd_tin:*=reskillable:agility|2
+        spartanweaponry:pike_tin:*=reskillable:attack|2
+        spartanweaponry:lance_tin:*=reskillable:attack|2
+        spartanweaponry:throwing_knife_tin:*=reskillable:agility|2
+        spartanweaponry:throwing_axe_tin:*=reskillable:agility|2
+        spartanweaponry:javelin_tin:*=reskillable:agility|2
+        spartanweaponry:boomerang_tin:*=reskillable:agility|2
+        spartanweaponry:battleaxe_tin:*=reskillable:attack|2
+        spartanweaponry:mace_tin:*=reskillable:attack|2
+        spartanweaponry:glaive_tin:*=reskillable:attack|2
+        spartanweaponry:staff_tin:*=reskillable:agility|2
         spartanweaponry:longbow_electrum:*=reskillable:attack|5,reskillable:agility|10,reskillable:magic|5
         spartanweaponry:crossbow_electrum:*=reskillable:attack|10,reskillable:agility|5,reskillable:magic|5
         spartanweaponry:dagger_electrum:*=reskillable:agility|10,reskillable:magic|6
@@ -614,10 +642,12 @@ general {
         spartanshields:shield_tower_bronze:*=reskillable:defense|6
         spartanshields:shield_basic_copper:*=reskillable:defense|2
         spartanshields:shield_tower_copper:*=reskillable:defense|2
+        spartanshields:shield_basic_tin:*=reskillable:defense|2
+        spartanshields:shield_tower_tin:*=reskillable:defense|2
         spartanshields:shield_basic_lead:*=reskillable:defense|6
         spartanshields:shield_tower_lead:*=reskillable:defense|6
-        spartanshields:shield_basic_electrum:*=reskillable:defense|2
-        spartanshields:shield_tower_electrum:*=reskillable:defense|2
+        spartanshields:shield_basic_electrum:*=reskillable:defense|10,reskillable:magic|6
+        spartanshields:shield_tower_electrum:*=reskillable:defense|10,reskillable:magic|6
         spartanshields:shield_basic_constantan:*=reskillable:defense|4
         spartanshields:shield_tower_constantan:*=reskillable:defense|4
         spartanshields:shield_basic_steel:*=reskillable:defense|5
