--- a/config/treechopper/treechopper.cfg
+++ b/config/treechopper/treechopper.cfg
@@ -155,12 +155,16 @@ data {
         item.notreepunching:saw.bronze
         item.notreepunching:saw.iron
         item.notreepunching:saw.steel
+        item.notreepunching:saw.tin
+        item.notreepunching:saw.lead
         item.notreepunching:saw.diamond
         item.notreepunching:mattock.copper
         item.notreepunching:mattock.bronze
         item.notreepunching:mattock.gold
         item.notreepunching:mattock.iron
         item.notreepunching:mattock.steel
+        item.notreepunching:mattock.lead
+        item.notreepunching:mattock.tin
         item.notreepunching:mattock.diamond
         item.notreepunching:axe.flint
         item.immersiveengineering.axe_steel
@@ -173,6 +177,8 @@ data {
         item.spartanweaponry:battleaxe_iron
         item.spartanweaponry:battleaxe_wood
         item.spartanweaponry:battleaxe_copper
+        item.spartanweaponry:battleaxe_tin
+        item.spartanweaponry:battleaxe_lead
         item.spartanweaponry:battleaxe_bronze
         item.spartanweaponry:battleaxe_stone
         item.spartanweaponry:battleaxe_silver
